--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
 
     defaultConfig {
         applicationId "kapadokia.nyandoro.videoapp"
-        minSdkVersion 23
+        minSdkVersion 26
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
@@ -23,6 +23,7 @@ android {
 }
 
 dependencies {
+    def exoPlayerVersion = "2.8.4"
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
@@ -36,6 +37,7 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 
     // video dependency
-    implementation 'com.google.android.exoplayer:exoplayer:2.9.5'
+    implementation "com.google.android.exoplayer:exoplayer:$exoPlayerVersion"
+
 
 }
